Fix camelcase app id

--- a/resources/default/app.conf
+++ b/resources/default/app.conf
@@ -1,6 +1,6 @@
 [ui]
 is_visible = 1
-label = Checkmarx Dashboard
+label = checkmarx
 
 [launcher]
 author = Uday Korlimarla
@@ -11,4 +11,4 @@ version = 0.0.1
 is_configured = 1
 
 [package]
-id = Checkmarx Dashboard
+id = checkmarx
