--- a/resources/default/app.conf
+++ b/resources/default/app.conf
@@ -3,7 +3,7 @@ is_visible = 1
 label = checkmarx
 
 [launcher]
-author = Uday Korlimarla
+author = checkmarx-ts
 description = Checkmarx Dashboard
 version = 0.0.1
 
